[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Cannons/gun09.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/playerShip1_blue.png" type="Texture" id=3]

[node name="ship" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="GunLeft" type="Node2D" parent="."]
position = Vector2( -30, 0 )

[node name="FirePosition" type="Position2D" parent="GunLeft"]
position = Vector2( 3, -27 )

[node name="Sprite" type="Sprite" parent="GunLeft"]
texture = ExtResource( 2 )
flip_v = true

[node name="GunRight" type="Node2D" parent="."]
position = Vector2( 30, 0 )

[node name="FirePosition" type="Position2D" parent="GunRight"]
position = Vector2( -3, -27 )

[node name="Sprite" type="Sprite" parent="GunRight"]
texture = ExtResource( 2 )
flip_h = true
flip_v = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( 40.2812, 17.8723, 40.2812, 3.91715, 11.9665, -11.4537, 8.52824, -37.1392, -8.46061, -37.1392, -11.0898, -11.4537, -42.0338, 6.14188, -42.0338, 17.4678 )
